--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/yassinereptor/Android/Sdk
-flutter.sdk=/home/yassinereptor/Development/flutter
+sdk.dir=/goinfre/sdk
+flutter.sdk=/goinfre/.docker/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
