--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   extended_image: ^0.5.1
   cached_network_image: ^1.0.0
   carousel_slider: ^1.3.0
+  timeago: ^2.0.17
   
 dev_dependencies:
   flutter_test:
