--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   cached_network_image: ^1.0.0
   carousel_slider: ^1.3.0
   timeago: ^2.0.17
-  
+  photo_view: ^0.1.3
+  flutter_slidable: "^0.5.3"
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
