--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/profile.png
     - assets/images/bg.jpg
+    - assets/images/placeholder.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
