--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   timeago: ^2.0.17
   photo_view: ^0.1.3
   flutter_slidable: "^0.5.3"
-  # flip_card: ^0.3.0
   flutter_flip_view: ^1.0.1
+  fluttertoast: ^3.1.0
     
 dev_dependencies:
   flutter_test:
@@ -74,6 +74,8 @@ flutter:
     - assets/images/credit-cards_visa.png
     - assets/images/visa_logo.png
     - assets/images/mastercard_logo.png
+    - assets/images/paypal_logo.png
+    - assets/images/bitcoin_logo.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
